--- a/css-files/login-account-register.css
+++ b/css-files/login-account-register.css
@@ -74,7 +74,11 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://st4.depositphotos.com/1008011/25358/i/450/depositphotos_253584854-stock-photo-luxury-house-exterior-theme-blur.jpg')
 }
 
-.hero-image-login {
+.hero-image-succesful {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://static.vecteezy.com/system/resources/previews/006/037/235/large_2x/wooden-house-growing-in-soil-on-green-nature-blur-background-home-business-grow-up-concept-free-photo.JPG')
+}
+
+.hero-image-login, .hero-image-succesful {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -160,12 +164,54 @@
     background-color: #ffffff;
     width: 250px;
     margin-left: 350px;
-    border: 15px;
+    border-radius: 15px;
     text-align: center;
     margin-bottom: 10px;
 }
 
 #problems-creating-account-button a {
+    text-decoration: none;
+    color: red;
+}
+
+.hero-text-succesful {
+    color: #ffffff;
+    text-align: center;
+    padding-top: 5px;
+}
+
+.hero-image-succesful {
+    width: 1200px;
+    height: 300px;
+    border-radius: 15px;
+    margin-left: 120px;
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+
+.hero-text-succesful h1 {
+    font-size: 35px;
+}
+
+.hero-text-succesful h2 {
+    font-size: 30px;
+}
+
+.hero-text-succesfull p {
+    font-size: 20px;
+}
+
+#problems-again-account-button {
+    background-color: #ffffff;
+    border-radius: 15px;
+    border: 2px solid #000000;
+    width: 250px;
+    margin-left: 500px;
+    margin-bottom: 30px;
+}
+
+#problems-again-account-button a {
     text-decoration: none;
     color: red;
 }
