--- a/css-files/staff.css
+++ b/css-files/staff.css
@@ -1,46 +1,74 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
+.meet-the-team {
+    margin-left: 5%;
+    margin-right: 2.5%;
+    color: #203036;
+    height: 100%;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    h1 {
+        font-size: 55px;
+        margin-bottom: 15px;
+    }
+    p {
+        font-size: 25px;
+    }
 
-.profile-cards-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around; /* Adjust alignment as needed */
-}
+    .team-mates {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 50px;
+        color: white;
 
-.profile-card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 20px;
-    padding: 20px;
-    width: 500px; /* Adjust width as needed */
-}
+        .agent {
+            margin-top: 50px;
+            background-image: url(/photos/squiggly3.png);
+            background-repeat: no-repeat;
+            background-position: center;
+            border-radius: 5px;
+            box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+            width: 550px;
+            height: 800px;
 
-.profile-card h2 {
-    margin-top: 0;
-    margin-bottom: 5px;
-}
+            .agent-textbox {
+                margin-left: 50px;
 
-.profile-card .title {
-    color: #555;
-    font-size: 16px;
-    margin-top: 0;
-}
+                .contact-info-agent {
+                    margin-top: 50px;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
 
-.profile-card p {
-    margin: 5px 0;
-    font-size: 14px;
-}
+                    .agent-phone, .agent-email {
+                        display: flex;
+                        flex-direction: row;
+                        gap: 10px;
 
-.profile-card a {
-    text-decoration: none;
-    color: #007bff;
-}
+                        i {
+                            color: lightblue;
+                            margin-top: 5px;
+                        }
 
-.profile-card a:hover {
-    text-decoration: underline;
+                        a {
+                            color: lightblue;
+                            text-decoration: none;
+                        }
+                    }
+                }
+            }
+
+            .agent-profile-picture {
+
+                width: 550px;
+                height: 350px;
+
+                img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 5px 5px 0px 0px;
+                }
+            }
+        }
+    }
 }
