--- a/css-files/staff.css
+++ b/css-files/staff.css
@@ -1,9 +1,14 @@
+body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 .meet-the-team {
     display: flex;
     flex-direction: column;
-    width: 99%;
+    width: 95%;
     justify-content: center;
-    margin-right: 2.5%;
+    margin-right: 4%;
     color: #203036;
     height: 100%;
     margin-bottom: 100px;
@@ -25,6 +30,7 @@
         color: white;
 
         .agent {
+            margin-right: 2.5%;
             margin-top: 50px;
             background-image: url(/photos/squiggly3.png);
             background-repeat: no-repeat;
