--- a/css-files/staff.css
+++ b/css-files/staff.css
@@ -219,3 +219,103 @@ body {
         }
     }   
 }
+@media (max-width: 490px) {
+    .meet-the-team {
+
+        .team-mates {
+            .agent {
+                height: 275px;
+                width: 550px;
+                .agent-profile-picture {
+    
+                    width: 175px;
+                    height: 275px;
+                }
+            }
+        }
+    }   
+}
+@media (max-width: 445px) {
+    .meet-the-team {
+
+        .team-mates {
+            .agent {
+                height: 250px;
+                width: 550px;
+
+                .agent-textbox {
+                    margin-left: 15px;
+                    h4 {
+                        margin-bottom: 0px;
+                    }
+                }
+
+                .agent-profile-picture {
+    
+                    width: 150px;
+                    height: 250px;
+                }
+            }
+        }
+    }   
+}
+@media (max-width: 407px) {
+    .meet-the-team {
+
+        h1 {
+            font-size: 33px;
+        }
+        p {
+            font-size: 20px;
+        }
+
+        .team-mates {
+            .agent {
+                height: 250px;
+                width: 550px;
+
+                .agent-profile-picture {
+    
+                    width: 125px;
+                    height: 250px;
+                }
+            }
+        }
+    }   
+}
+
+@media (max-width: 375px) {
+    .meet-the-team {
+
+        .team-mates {
+            gap: 0px;
+            margin-bottom: 0px;
+            .agent {
+                flex-direction: column;
+                height: 500px;
+                width: 550px;
+
+                .agent-profile-picture {
+    
+                    width: 100%;
+                    height: 250px;
+
+                    img {
+                        border-radius: 5px 5px 0px 0px;
+                    }
+                }
+            }
+        }
+    }   
+}
+
+@media (max-width: 300px) {
+    .meet-the-team {
+        h1 {
+            font-size: 29px;
+        }
+        p {
+            font-size: 19px;
+        }
+    }   
+}
