--- a/css-files/career.css
+++ b/css-files/career.css
@@ -3,24 +3,38 @@ body {
 }
 
 
-.one {
+.front-image {
     width: 100%;
     height: 500px;
     top: 0;
     left: 0;
+}
 
-    position: relative;
+.main-image {
 
-    .two {
+    width: 100%;
+    height: 500px;
+}
 
-        position: relative;
-        width: 100%;
-        height: 500px;
+.main-image img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
 
-        img {
-            width: 100%;
-            height: 500px;
-            object-fit: cover;
-        }
-    }
+h1 {
+    position: absolute;
+    top: 47%;
+    height: 100%;
+
+    font-size: 100px;
+    margin-left: 5%;
+    color: white;
+}
+
+.page-content {
+    margin-left: 5%;
+    margin-right: 5%;
+    min-height: 100vh;
+    margin-top: 150px;
 }
