--- a/css-files/career.css
+++ b/css-files/career.css
@@ -86,6 +86,8 @@ h1 {
 .positions a:hover{
     transition: 0.25s;
     transform: scale(1.05);
+    background-image: linear-gradient(to top, rgba(8, 96, 57, 0.799), rgba(0, 0, 0, 0)),
+    url(/photos/squiggly3.png);
 }
 
 .position {
@@ -161,6 +163,8 @@ h1 {
 .create:hover, .login:hover {
     transition: 0.25s;
     transform: scale(1.1);
+    background-image: linear-gradient(to top, rgba(8, 96, 57, 0.799), rgba(8, 96, 57, 0.799)),
+    url();
 }
 
 @media (max-width: 1375px) {
