--- a/css-files/construction.css
+++ b/css-files/construction.css
@@ -1,55 +1,5 @@
-.build-form-contact {
-  width: 1000px;
-  background-color: #aaaaaa;
-  display: flex;
-}
-
-#first-name, #last-name {
-  width: 170px;
-}
-
-.first-name-field input, .last-name-field input {
-  font-size: 18px;
-  width: 280px;
-}
-
-.first-name-field, .last-name-field {
-  margin-left: 150px;
-}
-
-.email-field {
-  margin-top: 130px;
-  margin-left: -390px;
-  width: 450px;
-}
-
-.email-field input {
-  width: 400px;
-  font-size: 18px;
-}
-
-.phone-field {
-  margin-top: 100px;
-  margin-left: 50px;
-}
-
-.phone-field input {
-  font-size: 15px;
-  width: 400px;
-}
-
-.message-filed {
-  width: 500px;
-  margin-top: 200px;
-  margin-left: -500px;
-}
-
-.message-filed label {
-  width: 600px;
-}
-
- /*Text Code*/
- .text {
+/*Text Code*/
+.text {
   font-size: 17px;
   margin-left: -20px;
   padding-top: 10%;
@@ -57,18 +7,86 @@
   text-align: center;
 }
 
-textarea {
-  font: 1em sans-serif;
-  width: 350px;
-  box-sizing: border-box;
+/*Main Form Setting*/
+.contactform, .checkoutform {
+  background-color: #203036;
+  color: #ffffff;
+  width: 900px;
+  padding: 1em;
   border: 2px solid #000000;
-  outline: none;
+  border-radius: 1em;
+}
+
+/*Contact Form In Contact Page Code*/
+.contactform {
+  margin: 50px auto;
+}
+
+/*Checkout Form Code*/
+.checkoutform {
+  margin: 20px;
+}
+
+/*List Settings*/
+ul {
+  list-style: none;
+  padding: 10px;
+  margin: 10px;
+}
+
+/*Length Of The Text In Form*/
+label {
+  display: inline-block;
+  width: 300px;
+  text-align: center;
+}
+
+/*Input Field After This Sign*/
+label::after {
+  content: ":";
+}
+
+/*Input Area Code*/
+input,textarea {
+font: 1em sans-serif;
+width: 500px;
+box-sizing: border-box;
+border: 2px solid #0C1435;
+outline: none;
+background-color: #ffffff;
+border-radius: 20px;
 }
 
 /*Comment Field Code*/
 textarea {
-  vertical-align: middle;
-  height: 5em;
-  resize: vertical;
-  resize: none;
+vertical-align: middle;
+height: 5em;
+resize: vertical;
+resize: none;
+padding-left: 10px;
+}
+
+/*Button In The Form*/
+form a {
+border: 2px solid red;
+background-color: #000000;
+float: auto;
+cursor: pointer;
+border-radius: 15px;
+margin: 200px;
+padding: 10px;
+text-decoration: none;
+color: #ffffff;
+}
+
+.formbutton {
+  margin-left: 220px;
+  width: 900px;
+  margin-top: 20px;
+}
+
+.formbutton a:hover {
+  background-color: #ffffff;
+  color: #000;
+  border: 2px solid green;
 }
