--- a/css-files/construction.css
+++ b/css-files/construction.css
@@ -90,3 +90,11 @@ color: #ffffff;
   color: #000;
   border: 2px solid green;
 }
+
+.build-page-info {
+  background-color: #0C1435;
+  width: 1200px;
+  border-radius: 20px;
+  border: 2px solid #000000;
+  margin-left: 150px;
+}
