changed the design

--- a/css-files/career.css
+++ b/css-files/career.css
@@ -54,18 +54,26 @@ h1 {
     color: #203036;
 }
 
+.page-content .titles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .content-positions {
 
     margin-top: 125px;
 
-    width: 100%;
     justify-content: center;
     align-items: center;
+    background-color: #2030365b;
+    border-radius: 5px;
+    padding: 20px;
 }
 
 .content-positions h3 {
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 75px;
     color: #203036;
 }
 
@@ -84,7 +92,7 @@ h1 {
 }
 
 .positions a:hover{
-    transition: 0.25s;
+    transition: 0.3s;
     transform: scale(1.05);
     background-image: linear-gradient(to top, rgba(8, 96, 57, 0.799), rgba(0, 0, 0, 0)),
     url(/photos/squiggly3.png);
@@ -161,7 +169,7 @@ h1 {
 }
 
 .create:hover, .login:hover {
-    transition: 0.25s;
+    transition: 0.3s;
     transform: scale(1.1);
     background-image: linear-gradient(to top, rgba(8, 96, 57, 0.799), rgba(8, 96, 57, 0.799)),
     url();
