--- a/css-files/career.css
+++ b/css-files/career.css
@@ -31,16 +31,28 @@ body {
 }
 
 .title {
-    top: 58%;
+    top: 55%;
     left: 0;
     margin-left: 5%;
+    margin-right: 5%;
     height: 100%;
     position: absolute;
+}
 
+.title h2 {
+    color: white;
+    font-size: 60px;
+    margin-bottom: 5px;
+}
+
+.title span {
+    color: white;
+    margin-top: 0px;
 }
 
 h1 {
-    font-size: 100px;
+    font-size: 1px;
+
     color: white;
 }
 
@@ -58,6 +70,11 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.titles h2 {
+    font-size: 55px;
+    margin-bottom: 0px;
 }
 
 .content-positions {
